<resources>
	<string name="action_browser">cari</string>
	<string name="action_email">mail</string>
	<string name="action_map">map</string>
	<string name="action_telephone_call">telepon</string>
	<string name="action_telephone_sms">sms</string>
	<string name="app_name">MobileProgramming</string>
	<string name="button">button</string>
	<string name="calendar">Calendar</string>
	<string name="date_format">%1$d %2$s %3$d</string>
	<string name="deskripsi">Deskripsi</string>
	<string name="detail_gambar_berita">Detail gambar berita</string>
	<string name="dialog">Dialog</string>
	<string name="dua">Dua</string>
	<string name="gambar_berita">Gambar berita</string>
	<string name="hint_email">Alamat email</string>
	<string name="hint_map">Kode pos</string>
	<string name="hint_nama">Nama lengkap</string>
	<string name="hint_telepon">Nomor telepon</string>
	<string name="isi">Isi</string>
	<string name="judul">Judul</string>
	<string name="kosong" />
	<string name="link">Link</string>
	<string name="list_view">List View</string>
	<string name="move">Move</string>
	<string name="open">Open</string>
	<string name="picker_view">Picker View</string>
	<string name="satu">Satu</string>
	<string name="submit">Submit</string>
	<string name="textview">TextView</string>
	<string name="time">Time</string>
	<string name="time_format">%1$d:%2$02d</string>
	<string name="toast">Toast</string>
	<string name="todo">TODO</string>
	<string name="tugas01">Tugas 1</string>
	<string name="tugas02">Tugas 2</string>
	<string name="tugas03">Tugas 3</string>
	<string name="tugas04">Tugas 4</string>
	<string name="tugas05">Tugas 5</string>
	<string name="tugas06">Tugas 6</string>
	<string name="item">Item</string>
	<string name="help">Help</string>
	<string name="setting">Setting</string>
	<string name="about">About</string>
</resources>
