<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Tugas04DetailViewActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="32dp">

		<ImageView
			android:id="@+id/beritaDetailGambar"
			android:layout_width="300dp"
			android:layout_height="200dp"
			android:layout_gravity="center_horizontal"
			android:contentDescription="@string/detail_gambar_berita"
			android:paddingBottom="32dp"
			tools:srcCompat="@tools:sample/avatars" />

		<TextView
			android:id="@+id/beritaDetailJudul"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:gravity="center"
			android:paddingBottom="32dp"
			android:text="@string/judul"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/beritaDetailIsi"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="32dp"
			android:text="@string/isi" />

		<Button
			android:id="@+id/beritaDetailLink"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/open" />
	</LinearLayout>
</ScrollView>
