<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<Button
		android:id="@+id/buttonDialog"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dialog"
		app:layout_constraintBottom_toTopOf="@id/buttonToast"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/buttonToast"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/toast"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/buttonDialog" />

	<Button
		android:id="@+id/buttonMove"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/move"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/buttonToast" />
</androidx.constraintlayout.widget.ConstraintLayout>
